# onshape-rest-api-client

./: AUTOGENERATED_README.md  CHANGELOG.md  LICENSE  MAINTENANCE.md  README.md  pyproject.toml
onshape_rest_api_client/: __init__.py
onshape_rest_api_client/api/account/: cancel_purchase_new.py  consume_purchase.py  get_plan_purchases.py  get_purchases.py
onshape_rest_api_client/models/: __init__.py  abort_transaction_response_default.py  accessor.py  accessor_data.py  accessor_extensions.py  accessor_extensions_additional_property.py  accessor_extras.py  accessor_model.py  accessor_sparse.py  accessor_sparse_extensions.py  accessor_sparse_extensions_additional_property.py  accessor_sparse_extras.py  accessor_sparse_indices.py  accessor_sparse_indices_extensions.py  accessor_sparse_indices_extensions_additional_property.py  accessor_sparse_indices_extras.py  accessor_sparse_values.py  accessor_sparse_values_extensions.py  accessor_sparse_values_extensions_additional_property.py  accessor_sparse_values_extras.py  add_attachment_body.py  add_attachment_body_file.py  animation.py  animation_channel.py  animation_channel_extensions.py  animation_channel_extensions_additional_property.py  animation_channel_extras.py  animation_channel_target.py  animation_channel_target_extensions.py  animation_channel_target_extensions_additional_property.py  animation_channel_target_extras.py  animation_extensions.py  animation_extensions_additional_property.py  animation_extras.py  animation_sampler.py  animation_sampler_extensions.py  animation_sampler_extensions_additional_property.py  animation_sampler_extras.py  api_response.py  api_response_content.py  (+1594 more)
(+295 files in other folders)
