[project]
name = "onshape-rest-api-client"
version = "1.210"
description = "A python client library for accessing Onshape REST API"
license = "MIT"
readme = "README.md"
authors = [ 
    {name="Mark Chackerian"},
]
keywords = ["onshape"]

[project.urls]
repository = "https://github.com/quarter20/onshape-rest-api-client"

[tool.poetry]
packages = [
    { include = "onshape_rest_api_client" },
]
include = ["onshape_rest_api_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
