[project]
name = "onshape-rest-api-client"
version = "1.210"
description = "A python client library for accessing the Onshape REST API"
license = "MIT"
license-files = [
    "LICENSE"
]
readme = "README.md"
authors = [ 
    {name="Mark Chackerian"},
]
keywords = ["onshape"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "attrs>=22.2.0",
    "python-dateutil>=2.8.1,<3.0.0",
    "httpx>=0.23.0,<0.29.0",
]

[project.urls]
repository = "https://github.com/quarter20/onshape-rest-api-client"

[tool.poetry]
packages = [
    { include = "onshape_rest_api_client" },
]
include = ["onshape_rest_api_client/py.typed"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
